@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="5" value="Production" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="120" y="20" width="320" height="60" as="geometry"/></mxCell><mxCell id="6" value="Preproduction" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="120" y="100" width="320" height="60" as="geometry"/></mxCell><mxCell id="7" value="Gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="340" y="70" width="90" height="40" as="geometry"/></mxCell><mxCell id="8" value="Testing" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="120" y="180" width="320" height="60" as="geometry"/></mxCell><mxCell id="11" value="Sandbox" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="120" y="260" width="320" height="60" as="geometry"/></mxCell><mxCell id="13" value="Gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="340" y="150" width="90" height="40" as="geometry"/></mxCell><mxCell id="14" value="Gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="340" y="230" width="90" height="40" as="geometry"/></mxCell></root></mxGraphModel>
