@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="Tenant 1" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="20" y="20" width="200" height="340" as="geometry"/></mxCell><mxCell id="6" value="HUB Gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="10" y="260" width="180" height="60" as="geometry"/></mxCell><mxCell id="9" value="" style="ellipse;shape=cloud;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="40" y="150" width="120" height="80" as="geometry"/></mxCell><mxCell id="12" value="External gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="10" y="50" width="180" height="60" as="geometry"/></mxCell><mxCell id="3" value="Tenant 2" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="230" y="20" width="200" height="340" as="geometry"><mxRectangle x="230" y="20" width="60" height="23" as="alternateBounds"/></mxGeometry></mxCell><mxCell id="7" value="HUB Gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="3"><mxGeometry x="10" y="260" width="180" height="60" as="geometry"/></mxCell><mxCell id="10" value="" style="ellipse;shape=cloud;whiteSpace=wrap" vertex="1" parent="3"><mxGeometry x="40" y="150" width="120" height="80" as="geometry"/></mxCell><mxCell id="13" value="External gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="3"><mxGeometry x="10" y="50" width="180" height="60" as="geometry"/></mxCell><mxCell id="4" value="Tenant 3" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="440" y="20" width="200" height="340" as="geometry"/></mxCell><mxCell id="8" value="HUB Gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="4"><mxGeometry x="10" y="260" width="180" height="60" as="geometry"/></mxCell><mxCell id="11" value="" style="ellipse;shape=cloud;whiteSpace=wrap" vertex="1" parent="4"><mxGeometry x="40" y="150" width="120" height="80" as="geometry"/></mxCell><mxCell id="14" value="External gateways" style="rounded=1;whiteSpace=wrap" vertex="1" parent="4"><mxGeometry x="10" y="50" width="180" height="60" as="geometry"/></mxCell><mxCell id="5" value="Tenant HUB" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="20" y="370" width="620" height="120" as="geometry"/></mxCell><mxCell id="15" value="Management&#xa;services" style="rounded=1;whiteSpace=wrap" vertex="1" parent="5"><mxGeometry x="250" y="40" width="120" height="60" as="geometry"/></mxCell><mxCell id="17" value="push" style="edgeStyle=elbowEdgeStyle;elbow=vertical" edge="1" parent="1" source="15" target="8"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="300" y="460" as="sourcePoint"/><mxPoint x="400" y="360" as="targetPoint"/><Array as="points"><mxPoint x="440" y="400"/></Array></mxGeometry></mxCell><mxCell id="18" value="push" style="edgeStyle=elbowEdgeStyle;elbow=vertical" edge="1" parent="1" source="15" target="7"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="340" y="420" as="sourcePoint"/><mxPoint x="550" y="350" as="targetPoint"/></mxGeometry></mxCell><mxCell id="19" value="push" style="edgeStyle=elbowEdgeStyle;elbow=vertical" edge="1" parent="1" source="15" target="6"><mxGeometry width="100" height="100" relative="1" as="geometry"><mxPoint x="340" y="420" as="sourcePoint"/><mxPoint x="340" y="350" as="targetPoint"/><Array as="points"><mxPoint x="230" y="400"/></Array></mxGeometry></mxCell></root></mxGraphModel>
