@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="32" value="" style="shape=actor;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="90" y="60" width="40" height="60" as="geometry"/></mxCell><mxCell id="33" value="User group 1" style="text;spacingTop=-5;" vertex="1" parent="1"><mxGeometry x="75" y="30" width="65" height="20" as="geometry"/></mxCell><mxCell id="34" value="" style="shape=actor;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="250" y="60" width="40" height="60" as="geometry"/></mxCell><mxCell id="35" value="User group 2" style="text;spacingTop=-5;" vertex="1" parent="1"><mxGeometry x="237.5" y="30" width="65" height="20" as="geometry"/></mxCell><mxCell id="36" value="" style="shape=actor;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="410" y="60" width="40" height="60" as="geometry"/></mxCell><mxCell id="37" value="User group 3" style="text;spacingTop=-5;" vertex="1" parent="1"><mxGeometry x="397.5" y="30" width="65" height="20" as="geometry"/></mxCell><mxCell id="38" value="System group 1" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="52.5" y="270" width="120" height="60" as="geometry"/></mxCell><mxCell id="39" value="System group 2" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="212.5" y="270" width="120" height="60" as="geometry"/></mxCell><mxCell id="40" value="System group 3" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="372.5" y="270" width="120" height="60" as="geometry"/></mxCell><mxCell id="41" value="System Bus" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="50" y="340" width="442.5" height="60" as="geometry"/></mxCell><mxCell id="42" value="Access Methods A" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="47.5" y="130" width="120" height="30" as="geometry"/></mxCell><mxCell id="44" value="Access Methods A" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="210" y="130" width="120" height="30" as="geometry"/></mxCell><mxCell id="45" value="Access Methods B" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="211.25" y="170" width="120" height="30" as="geometry"/></mxCell><mxCell id="46" value="Access Methods B" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="370" y="170" width="120" height="30" as="geometry"/></mxCell><mxCell id="47" value="Access Methods C" style="whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="370" y="210" width="120" height="30" as="geometry"/></mxCell><mxCell id="48" value="Usergroup agnostic services" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="50" y="410" width="440" height="60" as="geometry"/></mxCell></root></mxGraphModel>
