@@ -1,5 +1,6 @@
 ** (2013-12-17) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Add info on audit/syslog
+	- Add introduction to architecture structure (TUSAC)
 
 ** (2013-12-13) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Update platform information
